# app-mobile-workshop

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  deploy-lambdas-env.yml  deploy-lambdas.yml  deploy-users-lambda.yml  terraform-apply.yml  terraform-plan.yml
docs/: serverless-users-api.drawio
infrastructure/: HCP_TERRAFORM.md  README.md  components.tfcomponent.hcl  deployments.tfdeploy.hcl  outputs.tfcomponent.hcl  variables.tfcomponent.hcl
infrastructure/modules/workshop/: api-gateway.tf  cognito.tf  ddb.tf  lambda-authorizer.tf  lambda-users.tf  observability.tf  outputs.tf  variables.tf
scripts/: build-authorizer-lambda.sh  build-users-lambda.sh
src/functions/authorizer/: Cargo.toml
src/functions/authorizer/src/: lib.rs  main.rs
src/functions/authorizer/tests/: test_authorizer.rs
src/functions/users/: Cargo.toml
src/functions/users/src/: errors.rs  handlers.rs  lib.rs  main.rs  models.rs
src/functions/users/tests/: test_errors.rs  test_handlers.rs  test_models.rs  test_routing.rs
src/functions/users/tests/common/: mod.rs
tests/integration/: .env.example  test_users_lambda.sh
tests/unit/: run_all.sh
tests/unit/authorizer/: run_tests.sh
tests/unit/users/: run_tests.sh
