[package]
name = "authorizer-lambda"
version = "0.1.0"
edition = "2021"

[lib]
name = "authorizer_lambda"
path = "src/lib.rs"

[[bin]]
name = "authorizer-lambda"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
jsonwebtoken = "9"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
serde_json = "1"
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
