[package]
name = "users-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
