[package]
name = "users-lambda"
version = "0.1.0"
edition = "2021"

[lib]
name = "users_lambda"
path = "src/lib.rs"

[[bin]]
name = "users-lambda"
path = "src/main.rs"

[dependencies]
lambda_http = "1.0.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
aws-sdk-dynamodb = { version = "1", features = ["test-util"] }
aws-credential-types = { version = "1", features = ["test-util"] }
aws-smithy-runtime = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
http = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
serde_json = "1"
